# clean-architecture-fastapi-project-template

./: .gitattributes
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  docker-compose.override.yml  docker-compose.yml  env.template  pyproject.toml
{{cookiecutter.project_slug}}/scripts/: init-db.sql  init-sqlite.sh
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/config/: database.py  redis.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/config/ioc/: di.py  providers.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructures/broker/: publisher.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructures/cache/: redis_client.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructures/db/migrations/: env.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructures/db/models/: __init__.py  artifact.py  base.py
